Add html game elemnts and css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wheel of Fortune</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <script defer src="javascript/javascript.js"></script>
+
 </head>
 <body>
-    
+    <main>
+        <h1>Wheel of Fortune</h1>
+
+        <section class="game-elements">
+            <div class="wheel" id="wheel"></div>
+            <div id="guess-board"></div>
+            <button class="guess-letter-btn" id="guess-letter-btn">Guess Letter</button>
+            <button class="guess-word-btn" id="guess-word-btn">Guess Word</button>
+            <button class="spin-btn" id="spin-btn">Spin</button>
+        </section>
+    </main>
 </body>
 </html>
