Add header h1 in html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
 </head>
 <body>
-    <main>
+    <header>
         <h1>Wheel of Fortune</h1>
-
+    </header>
+    
+    <main>
         <section class="game-elements">
             <div class="wheel" id="wheel"></div>
             <div id="guess-board"></div>
