Update button elements

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
       <div>
         <button class="letter-guess-btn" id="letter-guess-btn">Guess Letter</button>
       </div>
-      <div class="guess-word">
+      <div>
         <button class="word-guess-btn" id="word-guess-btn">Guess Word</button>
-        <input type="text" id="word-input" placeholder="Enter your word guess">
       </div>
 
     </main>
