Add lives element

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="game-board" id="game-board"></div>
       <div class="player-panel" id="player-panel">
         <p>Cash: $<span id="cash">0</span></p>
+        <p>Lives: <span id ="lives">3</span></p>
       </div>
       <div>
         <button class="spin-btn" id="spin-btn">Spin</button>
