Add wheel element

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <div class="player-panel" id="player-panel">
         <p>Cash: $<span id="cash">0</span></p>
         <p>Lives: <span id ="lives">3</span></p>
+      </div> 
+      <div class="wheel" id="wheel">
+        <img src="/images/wheel.jpg" alt="Image of wheel">
       </div>
       <div>
         <button class="spin-btn" id="spin-btn">Spin</button>
