--- a/index.html
+++ b/index.html
@@ -20,17 +20,32 @@
     
     <main>
 
+      <!--Game board-->
       <div class="game-board" id="game-board"></div>
+
+      <!--Player Panel-->
       <div class="player-panel" id="player-panel">
         <p>Cash: $<span id="cash">0</span></p>
         <p>Lives: <span id ="lives">3</span></p>
       </div> 
-      <div class="wheel" id="wheel">
-        <img src="/images/wheel.jpg" alt="Image of wheel">
-      </div>
-      <div>
-        <button class="spin-btn" id="spin-btn">Spin</button>
-      </div>
+
+      <!--Wheel-->
+      <section class="container">
+        <button class="spinBtn" id="spinBtn">Spin</button>
+        <div class="wheel" id="wheel">
+          <div class="number" style="--i:1;--clr:#db7093;"><span>100</span></div>
+          <div class="number" style="--i:2;--clr:#20b2aa;"><span>200</span></div>
+          <div class="number" style="--i:3;--clr:#d63e92;"><span>300</span></div>
+          <div class="number" style="--i:4;--clr:#daa520;"><span>400</span></div>
+          <div class="number" style="--i:5;--clr:#ff340f;"><span>500</span></div>
+          <div class="number" style="--i:6;--clr:#ff7f50;"><span>600</span></div>
+          <div class="number" style="--i:7;--clr:#3cb371;"><span>700</span></div>
+          <div class="number" style="--i:8;--clr:#4169e1;"><span>800</span></div>
+        </div>
+      </section>
+    
+
+      <!--Buttons-->
       <div>
         <button class="letter-guess-btn" id="letter-guess-btn">Guess Letter</button>
       </div>
