--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <!--JavaScript-->
+    <script defer src="javascript/audio.js"></script>
     <script defer src="javascript/javascript.js"></script>
 
 </head>
@@ -33,17 +37,16 @@
       <section class="container">
         <button class="spinBtn" id="spinBtn">Spin</button>
         <div class="wheel" id="wheel">
-          <div class="number" style="--i:1;--clr:#db7093;"><span>100</span></div>
-          <div class="number" style="--i:2;--clr:#20b2aa;"><span>200</span></div>
-          <div class="number" style="--i:3;--clr:#d63e92;"><span>300</span></div>
-          <div class="number" style="--i:4;--clr:#daa520;"><span>400</span></div>
-          <div class="number" style="--i:5;--clr:#ff340f;"><span>500</span></div>
-          <div class="number" style="--i:6;--clr:#ff7f50;"><span>600</span></div>
-          <div class="number" style="--i:7;--clr:#3cb371;"><span>700</span></div>
-          <div class="number" style="--i:8;--clr:#4169e1;"><span>800</span></div>
+          <div class="number" style="--i:1;--clr:#db7093;"><span>$100</span></div>
+          <div class="number" style="--i:2;--clr:#20b2aa;"><span>$100</span></div>
+          <div class="number" style="--i:3;--clr:#d63e92;"><span>$100</span></div>
+          <div class="number" style="--i:4;--clr:#daa520;"><span>$100</span></div>
+          <div class="number" style="--i:5;--clr:#ff340f;"><span>$100</span></div>
+          <div class="number" style="--i:6;--clr:#ff7f50;"><span>$100</span></div>
+          <div class="number" style="--i:7;--clr:#3cb371;"><span>$100</span></div>
+          <div class="number" style="--i:8;--clr:#4169e1;"><span>$100</span></div>
         </div>
       </section>
-    
 
       <!--Buttons-->
       <div>
@@ -53,6 +56,9 @@
         <button class="word-guess-btn" id="word-guess-btn">Guess Word</button>
       </div>
 
+      <!-- Volume icon -->
+      <div id="volume-icon" onclick="toggleVolume()"><i class="fa-solid fa-volume-high"></i></div>
+      
     </main>
 </body>
 </html>
