--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       <section class="container">
         <button class="spinBtn" id="spinBtn">Spin</button>
         <div class="wheel" id="wheel">
-          <div class="number" style="--i:1;--clr:#db7093;"><span>$100</span></div>
-          <div class="number" style="--i:2;--clr:#20b2aa;"><span>$100</span></div>
-          <div class="number" style="--i:3;--clr:#d63e92;"><span>$100</span></div>
-          <div class="number" style="--i:4;--clr:#daa520;"><span>$100</span></div>
-          <div class="number" style="--i:5;--clr:#ff340f;"><span>$100</span></div>
-          <div class="number" style="--i:6;--clr:#ff7f50;"><span>$100</span></div>
-          <div class="number" style="--i:7;--clr:#3cb371;"><span>$100</span></div>
-          <div class="number" style="--i:8;--clr:#4169e1;"><span>$100</span></div>
+          <div class="number" style="--i:1;--clr:#00036d;"><span>$100</span></div>
+          <div class="number" style="--i:2;--clr:#7502a7;"><span>$100</span></div>
+          <div class="number" style="--i:3;--clr:#cf0333;"><span>$100</span></div>
+          <div class="number" style="--i:4;--clr:#08c029;"><span>$100</span></div>
+          <div class="number" style="--i:5;--clr:#00036d;"><span>$100</span></div>
+          <div class="number" style="--i:6;--clr:#7502a7;"><span>$100</span></div>
+          <div class="number" style="--i:7;--clr:#cf0333;"><span>$100</span></div>
+          <div class="number" style="--i:8;--clr:#08c029;"><span>$100</span></div>
         </div>
       </section>
 
