Add start panel

--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@
     <header>
         <h1>Wheel of Fortune</h1>
     </header>
-    
     <main>
+
+      <!--Start Panel-->
+      <div class="start-panel">
+        <h3>Let's play Wheel of Fortune!</h3>
+        <div id="text-container">
+          <h4>How to Play:</h4>
+          <p>1. Spin the Wheel - Click the "Spin" button to spin the wheel.<br>
+             2. Guess - Guess a letter or word to solve the mystery word.<br>
+             3. The theme is fruits! Good luck!
+          </p>
+        </div>
+        <button id="startBtn">Start</button>
+      </div>
 
       <!--Game board-->
       <div class="game-board" id="game-board"></div>
@@ -58,7 +70,7 @@
 
       <!-- Volume icon -->
       <div id="volume-icon" onclick="toggleVolume()"><i class="fa-solid fa-volume-high"></i></div>
-      
+
     </main>
 </body>
 </html>
