--- a/index.html
+++ b/index.html
@@ -68,8 +68,18 @@
         <button class="word-guess-btn" id="word-guess-btn">Guess Word</button>
       </div>
 
-      <!-- Volume icon -->
+      <!--Volume icon-->
       <div id="volume-icon" onclick="toggleVolume()"><i class="fa-solid fa-volume-high"></i></div>
+
+      <!--Audio-->
+      <audio id="game-audio">
+        <source src="../audio/background-music.mp3" type="audio/mp3">
+        <source src="../audio/correct.mp3" type="audio/mp3">
+        <source src="../audio/lose.mp3" type="audio/mp3">
+        <source src="../audio/win.mp3" type="audio/mp3">
+        <source src="../audio/wrong.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+      </audio>
 
     </main>
 </body>
